[gd_scene load_steps=6 format=3 uid="uid://h0lc28c7o3au"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/fart_engine/Database_Manager/Theme and Style/main_30.tres" id="1_t7akm"]
[ext_resource type="Script" path="res://addons/fart_engine/Event_Manager/Command_List_Forms/DialogOptions_EventInputForm.gd" id="2_jti2s"]
[ext_resource type="PackedScene" uid="uid://civbxt4nfyill" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_DropdownList.tscn" id="3_7o45f"]
[ext_resource type="PackedScene" uid="uid://bfgpjcl3ojtf7" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="4_yh6y0"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/NavigationButtonTemplate.tscn" id="5_n5aq4"]

[node name="DialogOptions_EventInputForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t7akm")
script = ExtResource("2_jti2s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -132.5
offset_right = 197.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -6.0
offset_right = -11.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Change this Event's Dialog Options Value"
horizontal_alignment = 1
uppercase = true

[node name="KeyDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_7o45f")]
visible = false
layout_mode = 2
label_text = "Which Event"
is_label_button = false

[node name="FieldDropdown" parent="Control/VBoxContainer" instance=ExtResource("3_7o45f")]
layout_mode = 2
label_text = "Which Option"
is_label_button = false
reference_table_name = "10021"

[node name="Checkbox_Template" parent="Control/VBoxContainer" instance=ExtResource("4_yh6y0")]
layout_mode = 2
size_flags_vertical = 3
is_label_button = false
showLabel = false
show_field = true

[node name="Label" parent="Control/VBoxContainer/Checkbox_Template" index="0"]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" parent="Control/VBoxContainer/HBoxContainer" groups=["Table Action"] instance=ExtResource("5_n5aq4")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Cancel" parent="Control/VBoxContainer/HBoxContainer" groups=["Table Action"] instance=ExtResource("5_n5aq4")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_horizontal = 3
auto_connect_signals = false
auto_set_minimum_size = false

[connection signal="input_selection_changed" from="Control/VBoxContainer/KeyDropdown" to="." method="_on_key_dropdown_input_selection_changed"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Accept" to="." method="_on_accept_button_up"]
[connection signal="button_up" from="Control/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]

[editable path="Control/VBoxContainer/Checkbox_Template"]
[editable path="Control/VBoxContainer/Checkbox_Template/Label"]
